--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
       </head>
 
     <body>
-        
+      <input type="range" min="1" max="100" value="20" class="slider" >
 
+      <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js" integrity="sha256-MlusDLJIP1GRgLrOflUQtshyP0TwT/RHXsI1wWGnQhs=" crossorigin="anonymous"></script>
+      <script src="script.js"></script>
     </body>
 </html>
