--- a/coolio.html
+++ b/coolio.html
@@ -7,8 +7,9 @@
         <link href="styles.css" rel="stylesheet" type="text/css" />
       </head>
 
-    <body>
+    <body class="lol">
+        <div class='blockk'></div>
       <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js" integrity="sha256-MlusDLJIP1GRgLrOflUQtshyP0TwT/RHXsI1wWGnQhs=" crossorigin="anonymous"></script>
-      <script src="script.js"></script>
+      <script src="block.js"></script>
     </body>
 </html>
